--- a/home.css
+++ b/home.css
@@ -277,12 +277,24 @@ main {
 
 @media (max-width: 600px) {
   header {
-    padding: 0 10px;
+    padding: 0 20px;
     height: 50px;
+  }
+
+  h1 {
+    font-size: 1.3rem;
   }
 
   .nav {
     display: none;
+  }
+
+  .menu-con {
+    width: 30px;
+  }
+
+  .menu-con img {
+    width: 20px;
   }
 
   .mobile-nav {
@@ -331,10 +343,6 @@ main {
 
   .post-content {
     max-width: 250px;
-  }
-
-  .menu-con {
-    width: 50px;
   }
 
   .settings {
